Fix wrapping

--- a/packages/data-bite/src/scss/bite.scss
+++ b/packages/data-bite/src/scss/bite.scss
@@ -157,6 +157,11 @@
 
     &.use-wrap .cdc-callout__body {
       flex-wrap: wrap;
+
+      .cdc-callout__databite,
+      .cdc-callout__content {
+        flex-basis: 100%;
+      }
     }
 
     .cdc-callout__databite {
